Добавил активити с настройками, исправил некоторые ошибки

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Калькулятор</string>
+    <string name="toast_parenthesis_err" >Скобка не открыта</string>
+    <string name="toast_theme_light" >Выбрана светлая тема</string>
+    <string name="toast_theme_dark" >Выбрана тёмная тема</string>
 </resources>
